alignment fixed

--- a/css/contact.scss
+++ b/css/contact.scss
@@ -474,3 +474,15 @@ section {
         }
     }
 }
+
+@media screen and (min-width: 2560px) {
+
+  .container{
+    width: 60%;
+  }
+
+  .logo {
+    width: 85px;
+  }
+
+}
